package com.hlaff.wallet_api.enums;

public enum Currency {
    BRL,
    USD,
    EUR
}
