package com.hlaff.wallet_api.enums;

public enum OperationType {
    DEPOSIT,
    WITHDRAW,
    TRANSFER_DEBIT,
    TRANSFER_CREDIT
}
