package com.hlaff.wallet_api.enums;

public enum WalletStatus {
    ACTIVE,
    BLOCKED,
    SUSPENDED
}
